# rust-kernel

./: Cargo.toml  Makefile  readme.MD
src/: lib.rs  main.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  long_mode_init.asm  multiboot_header.asm
src/arch/x86_64/tools/: linker.ld
src/memory/: area_frame_allocator.rs  mod.rs
src/video/: vga_buffer.rs
