[package]
name = "lysia"
version = "0.1.0"
edition = "2021"

# the profile for 'cargo build'
[profile.dev]
panic = "abort" # disable unwinding on panic

# the profile for 'cargo build --release'
[profile.release]
panic = "abort" # disable unwinding on panic

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
